[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budget_system_ubco_2025"
version = "1.0.0"
description = "A household financial management toolkit created by UBCO students for DATA542 course."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Zihao Sheng", email = "1844716292@qq.com" },
  { name = "Wei Li", email = "yhszhdw@163.com" },
  { name = "Binzheng Jin", email = "jedmond166666@163.com" }
]
requires-python = ">=3.9"

dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.8",
  "jinja2>=3.1",
  "ipython>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
